k8s_production_only/infra/production/namespace.yaml
---
# ============================================================
# NAMESPACE — dev
# Label requis pour les NetworkPolicy namespaceSelector
# ============================================================
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    kubernetes.io/metadata.name: production
    environment: production
